--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
 version: '3.8'
 services:
-  www:
-    build: php
+  app:
+    build: docker
     working_dir: /var/www/html
     container_name: app
     ports:
       - "8888:80"
+    extra_hosts:
+      - host.docker.internal:host-gateway
     volumes:
-      - ./php/vhosts:/etc/apache2/sites-enabled
-      - ./app:/var/www/html
-      - ./php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-      - ./php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
-      - ./php/xdebug.log:/var/www/xdebug.log
+      - ./docker/vhosts:/etc/apache2/sites-enabled
+      - .:/var/www/html
+      - ./docker/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./docker/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
+      - ./docker/xdebug.log:/var/www/xdebug.log
     restart: always
 
 volumes:
