--- a/.env
+++ b/.env
@@ -18,3 +18,5 @@
 APP_ENV=dev
 APP_SECRET=8349ff7eed7756f86bf16def285d3afe
 ###< symfony/framework-bundle ###
+OAUTH_FACEBOOK_ID=253025993772419
+OAUTH_FACEBOOK_SECRET=4d1b764377fd8e2cf4f7f2e872cbb821
